RESOLVED FIXED44730
Floats inside of multicol fail to hit test
https://bugs.webkit.org/show_bug.cgi?id=44730
Summary Floats inside of multicol fail to hit test
Simon Fraser (smfr)
Reported 2010-08-26 16:25:18 PDT
Floats inside a multicol element are not hit tested correctly. <rdar://problem/7794761>
Attachments
Testcase (249 bytes, text/html)
2010-08-26 16:27 PDT, Simon Fraser (smfr)
no flags
Hit test floats using column-adjusted coordinates (8.36 KB, patch)
2010-09-07 12:33 PDT, mitz
hyatt: review+
Simon Fraser (smfr)
Comment 1 2010-08-26 16:27:24 PDT
Created attachment 65643 [details] Testcase
mitz
Comment 2 2010-09-07 12:33:05 PDT
Created attachment 66750 [details] Hit test floats using column-adjusted coordinates
Dave Hyatt
Comment 3 2010-09-07 12:35:23 PDT
Comment on attachment 66750 [details] Hit test floats using column-adjusted coordinates r=me
WebKit Review Bot
Comment 4 2010-09-07 13:25:35 PDT
http://trac.webkit.org/changeset/66900 might have broken GTK Linux 32-bit Release The following changes are on the blame list: http://trac.webkit.org/changeset/66899 http://trac.webkit.org/changeset/66900
Eric Seidel (no email)
Comment 5 2010-10-13 12:26:52 PDT
Attachment 66750 [details] was posted by a committer and has review+, assigning to Dan Bernstein for commit.
Simon Fraser (smfr)
Comment 6 2010-10-13 13:09:53 PDT
Note You need to log in before you can comment on or make changes to this bug.