<rdar://problem/7794761> Floats inside of multicol fail to hit test https://bugs.webkit.org/show_bug.cgi?id=44730

Reviewed by Dave Hyatt.

WebCore:

Test: fast/multicol/hit-test-float.html

Factored float hit-testing out of nodeAtPoint so that hitTestColumns could
call it with column-adjusted coordinates.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeAtPoint):
(WebCore::RenderBlock::hitTestFloats):
(WebCore::RenderBlock::hitTestColumns):
* rendering/RenderBlock.h:

LayoutTests:

* fast/multicol/hit-test-float-expected.txt: Added.
* fast/multicol/hit-test-float.html: Added.



Canonical link: https://commits.webkit.org/57658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66900 268f45cc-cd09-0410-ab3c-d52691b4dbfc